# rlhf-code-generation

./: .gitignore  FINAL_LAUNCH_GUIDE.md  FINAL_README.md  FINAL_SIMPLIFIED_RLHF.md  FINAL_STATUS.md  FIXED_RLHF_GUIDE.md  INSTALLATION_GUIDE.md  METRICS_TRACKING_GUIDE.md  MODERN_RLHF_GUIDE.md  PIPELINE_DOCUMENTATION.md  PROBLEMS_SOLVED.md  PROGRESS_BARS_INFO.md  QUICK_START_GUIDE.md  README.md  RUBY_METRIC_EXPLANATION.md  SIMPLIFIED_RLHF_GUIDE.md  TRAINING_SPEED_FIX.md  all_code.txt  check_modern_rlhf.py  check_training_status.py  combined_code.py  create_synthetic_dataset.py  debug_run.py  diagnose.py  diagnose_training.py  evaluate_multiple_datasets.py  fix_dependencies.py  fix_environment.ps1  fix_training.py  gpu_verification_summary.py  install_minimal.py  plot_metrics.py  project_explanation.md  pyproject.toml  quick_diagnose.py  quick_fix.py  quick_start.py  quick_start_simple.py  quick_test.py  requirements-rlhf.txt  (+13 more)
25oct/: run_simple_dpo.py
clasifNN/: analyze_training.py  dataset.py  embedding.py  integrated_system.py  model.py  train_improved.py
datasets_for_training/: pairwise_prefs.csv  sft_dataset.csv
evaluation_results_server/: 2022-08-16-13-24-32-Anonymous.json  2022-08-16-13-25-20-Anonymous.json  2022-08-16-13-26-21-Anonymous.json  2022-08-16-13-27-36-Sergey Kovalchuk.json  2022-08-16-13-29-58-Sergey Kovalchuk.json  2022-08-16-13-31-10-Sergey Kovalchuk.json  2022-08-16-13-31-58-Sergey Kovalchuk.json  2022-08-16-13-32-20-Sergey Kovalchuk.json  2022-08-16-13-32-55-Sergey Kovalchuk.json  2022-08-16-13-34-05-Sergey Kovalchuk.json  (+297 more)
modern_rlhf/: 1.py  (+12 more)
(+94 files in other folders)
